--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,12 @@ body {
   background-color: skyblue;
   color: white;
   margin: 2px;
-  height: 40px;
   width: 100px;
   border-radius: 5px;
+  text-align: center;
+  padding: 10px 0 10px 0;
 }
+
 
 .but:hover {
   cursor:pointer;
